Limit combobox court results to 200 (#2433)
RISDEV-5901
Doc offices complained that 10 is not enough to find matching courts.